--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,15 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <link rel="icon" type="image/png" href="%VITE_APP_LOGO%" />
-    <link rel="apple-touch-icon" href="%VITE_APP_LOGO%" />
-    <title>%VITE_APP_TITLE%</title>
+    <meta name="description" content="HikmaNova is a creative platform showcasing innovation, artificial intelligence, and modern technology through cinematic design and insightful projects." />
+    <meta name="keywords" content="innovation, artificial intelligence, technology, digital transformation, modern projects, AI portfolio, tech creativity, futuristic design, informatics, smart solutions" />
+    <meta name="author" content="HikmaNova" />
+    <meta property="og:title" content="HikmaNova" />
+    <meta property="og:description" content="HikmaNova is a creative platform showcasing innovation, artificial intelligence, and modern technology through cinematic design and insightful projects." />
+    <meta property="og:image" content="Hikma Nova Final.png"/>
+    <link rel="icon" type="image/png" href="Hikma Nova Final.png" />
+    <link rel="apple-touch-icon" href="Hikma Nova Final.png" />
+    <title>HikmaNova</title>
     <!-- Google Fonts: Playfair Display (headings) and Inter (body) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,10 +24,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
+    <!-- <script
       defer
       src="%VITE_ANALYTICS_ENDPOINT%/umami"
-      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script>
+      data-website-id="%VITE_ANALYTICS_WEBSITE_ID%"></script> -->
   </body>
 
 </html>
